syntax = "proto3";
package emissions;

import "emissions/params.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/0xPellNetwork/aegis/x/emissions/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pell-chain/emissions/params";
  }
  // Queries a list of ListBalances items.
  rpc ListPoolAddresses(QueryListPoolAddressesRequest) returns (QueryListPoolAddressesResponse) {
    option (google.api.http).get = "/pell-chain/emissions/list_addresses";
  }

  // Queries a list of GetEmmisonsFactors items.
  rpc GetEmissionsFactors(QueryGetEmissionsFactorsRequest) returns (QueryGetEmissionsFactorsResponse) {
    option (google.api.http).get = "/pell-chain/emissions/get_emissions_factors";
  }

  // Queries a list of ShowAvailableEmissions items.
  rpc ShowAvailableEmissions(QueryShowAvailableEmissionsRequest) returns (QueryShowAvailableEmissionsResponse) {
    option (google.api.http).get = "/pell-chain/emissions/show_available_emissions/{address}";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// list pool addresses request
message QueryListPoolAddressesRequest {}

// list pool addresses response
message QueryListPoolAddressesResponse {
  string undistributed_observer_balances_address = 1;
  string undistributed_tss_balances_address = 2;
  string emission_module_address = 3;
}

// request of query emissions factors
message QueryGetEmissionsFactorsRequest {}

// response of query emissions factors
message QueryGetEmissionsFactorsResponse {
  string reserves_factor = 1;
  string bond_factor = 2;
  string duration_factor = 3;
}

// request of query available emissions
message QueryShowAvailableEmissionsRequest {
  string address = 1;
}

// response of query available emissions amount
message QueryShowAvailableEmissionsResponse {
  string amount = 1;
}
